[gd_scene load_steps=3 format=4 uid="uid://b6pvi03p7a6nj"]

[ext_resource type="PackedScene" uid="uid://ch1hh04p5qvav" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Base/PropertiesBase.tscn" id="1"]
[ext_resource type="Script" uid="uid://cemibm3dd2b8s" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Array/PropertiesArray.gd" id="2"]

[node name="PropertiesArray" instance=ExtResource("1")]
light_mask = 0
offset_right = 170.0
offset_bottom = 70.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FoldButton" type="Button" parent="HBoxContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
action_mode = 0
text = "Array"

[node name="FoldContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="PropertiesContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/FoldContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddButton" type="Button" parent="HBoxContainer/VBoxContainer/FoldContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "添加元素"

[node name="CloseButton" parent="HBoxContainer" index="1"]
visible = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/FoldButton" to="." method="FoldButtonPressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/FoldContainer/AddButton" to="." method="AddButtonPressed"]
